1999-09-01  Ken Raeburn  <raeburn@mit.edu>

	* kdc_util.c (select_session_keytype): If none of the requested
	ktypes are NULL or single-DES, force des-cbc-crc.

1999-08-18  Tom Yu  <tlyu@mit.edu>

	* kerberos_v4.c (compat_decrypt_key): Align DES3 enctypes with
	current names.
	(kerb_get_principal): Align DES3 enctypes with current names.

1999-06-30  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in (CFLAGS): Define NOCACHE.
	(DEFINES): Commented out, since it's unused.
	* dispatch.c (dispatch): If NOCACHE is defined, don't call
	lookaside buffer code.
	* replay.c: Disable all code if NOCACHE is defined.

1999-06-28  Tom Yu  <tlyu@mit.edu>

	* replay.c (MATCH): Fix up to compare the correct components of
	the input address.

Fri Apr 30 00:05:07 1999  Tom Yu  <tlyu@mit.edu>

	* kerberos_v4.c (kerberos_v4): Fix bug where krb_create_ticket()
	was getting called for an APPL_REQUEST even when there was no
	single-DES key, resulting in random weirdness.

Wed Feb 17 17:07:43 1999  Tom Yu  <tlyu@mit.edu>

	* do_as_req.c (process_as_req): Fix to assign kvno to
	reply.enc_part after encryption, since krb5_c_encrypt() now
	explicitly initializes all fields of a krb5_enc_data.

1998-12-17  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* kdc_preauth.c (check_padata): If preauth fails because the
		preauth data from the client was of an unknown type, and
		the principal does not require preauth, then the preauth
		should be disregarded.  [krb5-kdc/652]

Mon Jan  4 23:50:45 1999  Tom Yu  <tlyu@mit.edu>

	* configure.in (withval): Conditinalize ATHENA_DES3_KLUDGE on
	--enable-athena.

	* main.c (initialize_realms): Kludge to disable
	des3-marc-hmac-sha1 from the command line.

1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Set the myfulldir and mydir variables (which are
		relative to buildtop and thisconfigdir, respectively.)

1998-10-27  Marc Horowitz  <marc@mit.edu>

	* do_as_req.c, do_tgs_req.c, extern.h, kdc_preauth.c, kdc_util.c,